[project]
name = "working-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.11",
    "mcp[cli]>=1.6.0",
    "openai>=1.69.0",
    "playwright>=1.51.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.0",
]
